--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "dependencies": {
     "@11ty/eleventy": "2.0.1",
+    "@11ty/eleventy-fetch": "^4.0.0",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "@extractus/feed-extractor": "^7.0.1",
+    "@extractus/feed-extractor": "^7.0.5",
     "eleventy-plugin-gen-favicons": "^1.1.2",
     "eleventy-plugin-pwa-v2": "^1.0.0",
     "html-minifier-terser": "^7.2.0",
+    "image-type": "^5.2.0",
+    "is-svg": "^5.0.0",
     "luxon": "^3.3.0",
     "minify-xml": "^4.0.0",
     "npm-run-all": "^4.1.5",
