--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass": "^1.64.1",
     "sharp": "^0.32.4",
     "slugify": "^1.6.6",
+    "string-strip-html": "^8.5.0",
     "terser": "^5.19.2"
   }
 }
