--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "sass": "^1.72.0",
     "sharp": "^0.33.3",
     "slugify": "^1.6.6",
-    "string-strip-html": "^13.4.6",
+    "string-strip-html": "8.5.0",
     "terser": "^5.29.2"
   }
 }
