--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
     "@11ty/eleventy": "2.0.1",
     "@11ty/eleventy-fetch": "^4.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "@extractus/feed-extractor": "^7.1.3",
     "eleventy-plugin-gen-favicons": "^1.1.3",
     "html-minifier-terser": "^7.2.0",
-    "image-type": "^5.2.0",
-    "is-svg": "^5.1.0",
     "luxon": "^3.5.0",
     "minify-xml": "^4.5.2",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^6.0.1",
     "sass": "^1.77.8",
     "sharp": "^0.33.4",
     "slugify": "^1.6.6",
     "string-strip-html": "8.5.0",
     "terser": "^5.31.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1"
   }
 }
