--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@11ty/eleventy-fetch": "^4.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "eleventy-plugin-gen-favicons": "^1.1.3",
+    "gray-matter": "^4.0.3",
     "html-minifier-terser": "^7.2.0",
     "luxon": "^3.5.0",
     "minify-xml": "^4.5.2",
