--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@11ty/eleventy": "2.0.1",
     "@11ty/eleventy-fetch": "^4.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "cli-color": "^2.0.4",
     "eleventy-plugin-gen-favicons": "^1.1.3",
     "gray-matter": "^4.0.3",
     "html-minifier-terser": "^7.2.0",
