--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@11ty/eleventy": "2.0.1",
     "@11ty/eleventy-fetch": "^4.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "@extractus/feed-extractor": "^7.1.3",
     "cli-color": "^2.0.4",
     "eleventy-plugin-gen-favicons": "^1.1.3",
     "gray-matter": "^4.0.3",
     "html-minifier-terser": "^7.2.0",
+    "i": "^0.3.7",
     "luxon": "^3.5.0",
     "minify-xml": "^4.5.2",
+    "npm": "^10.8.2",
     "npm-run-all": "^4.1.5",
     "sass": "^1.77.8",
     "sharp": "^0.33.4",
