--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eleventy-template-multiplicity",
-  "version": "1.3.7",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "prebuild": "npm run clean",
@@ -11,6 +11,10 @@
     "watch:eleventy": "npx eleventy --serve --quiet",
     "watch:sass": "sass --no-source-map --watch ./styles:_site/css --style compressed",
     "build:sass": "sass --no-source-map styles:_site/css --style compressed",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix",
+    "format": "npx prettier .",
+    "format:fix": "npx prettier . --write",
     "clean": "rimraf _site",
     "predev": "npm run clean",
     "dev": "ELEVENTY_ENV=development npm-run-all build:sass --parallel watch:*",
@@ -22,18 +26,28 @@
     "@11ty/eleventy-fetch": "^4.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@extractus/feed-extractor": "^7.1.3",
+    "cli-color": "^2.0.4",
     "eleventy-plugin-gen-favicons": "^1.1.3",
+    "gray-matter": "^4.0.3",
     "html-minifier-terser": "^7.2.0",
+    "i": "^0.3.7",
     "image-type": "^5.2.0",
     "is-svg": "^5.1.0",
     "luxon": "^3.5.0",
     "minify-xml": "^4.5.2",
+    "npm": "^10.8.2",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^6.0.1",
     "sass": "^1.77.8",
     "sharp": "^0.33.4",
     "slugify": "^1.6.6",
     "string-strip-html": "8.5.0",
     "terser": "^5.31.5"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "eslint": "^9.9.0",
+    "globals": "^15.9.0",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1"
   }
 }
